Cleanup StateSynchronizationAvoidanceProcedureTest
Use List.of() instead of Collections and prettify builder invocation.

Change-Id: I87d77a51b5fef07e0b9bdb70c1ce19ddc7a896cc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>